# gen-semver-tags

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docker.yml  release-plz.yml
src/: lib.rs  main.rs
tests/: test_cli.rs
tests/cli/: add-latest-tag.toml  empty-latest-tag.toml  error-invalid-existing-version.toml  error-invalid-for-version.toml  generate-tags.toml  set-latest-tags-multiple.toml  set-latest-tags.toml
