[package]
name = "gen-semver-tags"
version = "0.1.1"
edition = "2021"
authors = ["Jan Gosmann"]
description = "Generate a set of SemVer tags, e.g. to tag container images."
repository = "https://github.com/jgosmann/gen-semver-tags"
license = "MIT OR Apache-2.0"
keywords = ["semver", "tags", "container", "image", "version"]

[features]
default = ["bin"]
bin = ["anyhow", "clap"]

[lib]
name = "gen_semver_tags"
path = "src/lib.rs"

[[bin]]
name = "gen-semver-tags"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0.96", optional = true }
clap = { version = "4.5.31", optional = true, features = ["derive", "unstable-markdown"] }
semver = "1.0.25"

[dev-dependencies]
trycmd = "0.15.9"
